--- a/firebase.json
+++ b/firebase.json
@@ -6,9 +6,12 @@
     "predeploy": [
       "npm --prefix $RESOURCE_DIR run lint"
     ]
-  },
+  },  
   "hosting": {
     "public": "build",
+    "headers": [
+      {"source": "/service-worker.js", "headers": [{"key": "Cache-Control", "value": "no-cache"}]}
+    ]
     "ignore": [
       "firebase.json",
       "**/.*",
