--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
+    "react-gist": "^1.2.1",
     "react-mixin": "^4.0.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
