--- a/firebase.json
+++ b/firebase.json
@@ -5,17 +5,25 @@
   "functions": {
     "predeploy": [
       "npm --prefix $RESOURCE_DIR run lint"
-    ]
-  },  
+    ],
+    "source": "functions"
+  },
   "hosting": {
     "public": "build",
-    "headers": [
-      {"source": "/service-worker.js", "headers": [{"key": "Cache-Control", "value": "no-cache"}]}
-    ],
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   }
 }
