--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
     "react-gist": "^1.2.1",
+    "react-gravatar": "^2.6.3",
     "react-mixin": "^4.0.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
